СДГИ-353-in-progress очкии гроков to server

--- a/configs/server/nginx/sites-enabled/eruditclub.conf
+++ b/configs/server/nginx/sites-enabled/eruditclub.conf
@@ -136,7 +136,7 @@ server {
             rewrite ^/snapshots/(.*)/$ /png_retriever.php?file=$1;
         }        
 
-        location ~* ^/vendor/.*\.(js)$ {
+        location ~* ^/static/.*\.(js)$ {
             
         }
         
