CLUB-353 after release. fix bugs 1

--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,5 @@ MYSQL_PASSWORD=root
 MYSQL_USER=root
 YII_ENV=dev
 DOMAIN=https://xn--d1aiwkc2d.club
+BOT_TOKEN=6895444471:vvv
+SCRABBLE_BOT_TOKEN=7414520371:vvv
