--- a/.env.example
+++ b/.env.example
@@ -8,3 +8,5 @@ YII_ENV=dev
 DOMAIN=https://xn--d1aiwkc2d.club
 BOT_TOKEN=6895444471:vvv
 SCRABBLE_BOT_TOKEN=7414520371:vvv
+SALT=46
+IV=lkjfdgjglfdgf
