--- a/.env.example
+++ b/.env.example
@@ -8,5 +8,6 @@ YII_ENV=dev
 DOMAIN=https://xn--d1aiwkc2d.club
 BOT_TOKEN=6895444471:vvv
 SCRABBLE_BOT_TOKEN=7414520371:vvv
+SUDOKU_BOT_TOKEN=7317320597:fff
 SALT=46
 IV=lkjfdgjglfdgf
